--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-rc.0"
+    "@tailwindcss/forms": "0.5.8",
+    "@tauri-apps/api": "2.0.0-rc.0",
+    "@tauri-apps/plugin-shell": "2.0.0-rc.1"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tauri-apps/cli": ">=2.0.0-rc.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.9",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "@sveltejs/adapter-static": "3.0.4",
+    "@sveltejs/kit": "2.5.26",
+    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@tauri-apps/cli": "2.0.0-rc.11",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.45",
+    "svelte": "4.2.19",
+    "svelte-check": "4.0.1",
+    "tailwindcss": "3.4.10",
+    "tslib": "2.7.0",
+    "typescript": "5.5.4",
+    "vite": "5.4.3"
   }
 }
