feat: add xterm.js terminal to hosts page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@iconify/svelte": "^4.0.2",
     "@tailwindcss/forms": "0.5.8",
     "@tauri-apps/api": "2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": "2.0.0-rc.1"
+    "@tauri-apps/plugin-shell": "2.0.0-rc.1",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "3.0.4",
