build: update Tauri dependencies to stable versions

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@iconify/svelte": "^4.0.2",
     "@tailwindcss/forms": "0.5.8",
-    "@tauri-apps/api": "2.0.0-rc.0",
-    "@tauri-apps/plugin-shell": "2.0.0-rc.1",
+    "@tauri-apps/api": "2.0.2",
+    "@tauri-apps/plugin-shell": "2.0.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0"
   },
@@ -24,7 +24,7 @@
     "@sveltejs/adapter-static": "3.0.4",
     "@sveltejs/kit": "2.5.26",
     "@sveltejs/vite-plugin-svelte": "3.1.2",
-    "@tauri-apps/cli": "2.0.0-rc.11",
+    "@tauri-apps/cli": "2.0.3",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.45",
     "svelte": "4.2.19",
