--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tauri-apps/api": "2.0.2",
     "@tauri-apps/plugin-shell": "2.0.0",
     "@xterm/addon-fit": "^0.10.0",
-    "@xterm/xterm": "^5.5.0"
+    "@xterm/xterm": "^5.5.0",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "3.0.4",
