--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "0.5.8",
     "@tauri-apps/api": "2.0.2",
     "@tauri-apps/plugin-shell": "2.0.0",
+    "@tauri-apps/plugin-websocket": "~2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "reset-css": "^5.0.2"
