--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": "2.0.2",
     "@tauri-apps/plugin-shell": "2.0.0",
     "@tauri-apps/plugin-websocket": "~2",
+    "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "reset-css": "^5.0.2"
