--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
+    "@melt-ui/pp": "^0.3.2",
+    "@melt-ui/svelte": "^0.86.2",
     "@sveltejs/adapter-static": "3.0.4",
     "@sveltejs/kit": "2.5.26",
     "@sveltejs/vite-plugin-svelte": "3.1.2",
