--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@iconify/svelte": "^4.0.2",
     "@tailwindcss/forms": "0.5.8",
     "@tauri-apps/api": "2.0.2",
-    "@tauri-apps/plugin-shell": "2.0.0",
+    "@tauri-apps/plugin-shell": "^2.0.1",
     "@tauri-apps/plugin-websocket": "~2",
     "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-fit": "^0.10.0",
