--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ssh2 = "0.9.4"
 tauri-plugin-websocket = "2"
+serde_repr = "0.1.19"
