--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@sveltejs/vite-plugin-svelte": "3.1.2",
     "@tauri-apps/cli": "2.0.3",
     "autoprefixer": "10.4.20",
+    "daisyui": "^4.12.22",
     "postcss": "8.4.45",
     "svelte": "4.2.19",
     "svelte-check": "4.0.1",
